--- a/index.html
+++ b/index.html
@@ -1,81 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Maze</title>
-<style>
-  #container {
-    position: relative;
-    width: 1200px;
-    height: 400px;
-    border: 1px solid black;
-    overflow: hidden;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maze</title>
 
-  #character {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-image: url("https://static.vecteezy.com/system/resources/previews/008/572/887/original/man-walking-character-isolated-on-white-background-side-view-illustration-with-free-vector.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    left: 0;
-    top: 0;
-  }
-</style>
-</head>
-<body>
-
-<div id="container">
-  <div id="character"></div>
-</div>
-
-<script>
-  const container = document.getElementById('container');
-  const character = document.getElementById('character');
-
-  const containerWidth = container.clientWidth;
-  const containerHeight = container.clientHeight;
-
-  const step = 10;
-
-  let posX = 0;
-  let posY = 0;
-
-  function moveCharacter(e) {
-    switch(e.key) {
-      case 'ArrowUp':
-        if (posY - step >= 0) {
-          posY -= step;
-        }
-        break;
-      case 'ArrowDown':
-        if (posY + step <= containerHeight - character.clientHeight) {
-          posY += step;
-        }
-        break;
-      case 'ArrowLeft':
-        if (posX - step >= 0) {
-          posX -= step;
-        }
-        break;
-      case 'ArrowRight':
-        if (posX + step <= containerWidth - character.clientWidth) {
-          posX += step;
-        }
-        break;
-      default:
-        return;
+  <style>
+    body {
+      margin: 0;
+      background: black;
     }
 
-    character.style.left = posX + 'px';
-    character.style.top = posY + 'px';
-  }
+    #container {
+      position: relative;
+      width: 1200px;
+      height: 400px;
+      border: 1px solid red;
+      overflow: hidden;
+    }
 
-  document.addEventListener('keydown', moveCharacter);
-</script>
+    #character {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      background-image: url("https://static.vecteezy.com/system/resources/previews/008/572/887/original/man-walking-character-isolated-on-white-background-side-view-illustration-with-free-vector.jpg");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
+      left: 0;
+      top: 0;
+    }
+  </style>
+</head>
 
+<body>
+
+  <!-- <div id="container">
+    <div id="character"></div>
+  </div> -->
+
+  <!-- <script>
+    const container = document.getElementById('container');
+    const character = document.getElementById('character');
+
+    const containerWidth = container.clientWidth;
+    const containerHeight = container.clientHeight;
+
+    const step = 10;
+
+    let posX = 0;
+    let posY = 0;
+
+    function moveCharacter(e) {
+      switch (e.key) {
+        case 'ArrowUp':
+          if (posY - step >= 0) {
+            posY -= step;
+          }
+          break;
+        case 'ArrowDown':
+          if (posY + step <= containerHeight - character.clientHeight) {
+            posY += step;
+          }
+          break;
+        case 'ArrowLeft':
+          if (posX - step >= 0) {
+            posX -= step;
+          }
+          break;
+        case 'ArrowRight':
+          if (posX + step <= containerWidth - character.clientWidth) {
+            posX += step;
+          }
+          break;
+        default:
+          return;
+      }
+
+      character.style.left = posX + 'px';
+      character.style.top = posY + 'px';
+    }
+
+    document.addEventListener('keydown', moveCharacter);
+
+  </script> -->
+
+  <script src="js/phaser.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
